refactor: change of the code for the better visibility

--- a/index.html
+++ b/index.html
@@ -33,49 +33,49 @@
             <div class="main-line line-left-1"></div>
             <div class="hexagon">
                 <div class="hex-layer-1">
-                    <div class="hex-layer-2-1"></div>
+                    <div class="hex-layer-item hex-layer-2-1"></div>
                 </div>
             </div>
             <div class="hexagon">
                 <div class="hex-layer-1">
-                    <div class="hex-layer-2-2"></div>
+                    <div class="hex-layer-item hex-layer-2-2"></div>
                 </div>
             </div>
             <div class="hexagon">
                 <div class="hex-layer-1">
-                    <div class="hex-layer-2-3"></div>
+                    <div class="hex-layer-item hex-layer-2-3"></div>
                 </div>
             </div>
             <div class="hexagon-1-4">
                 <div class="hex-layer-1">
-                    <div class="hex-layer-2-4"></div>
+                    <div class="hex-layer-item hex-layer-2-4"></div>
                 </div>
             </div>
             <div class="main-line line-right-1"></div>
             <div class="row-2">
                 <div class="hexagon-2">
                     <div class="hex-layer-1">
-                        <div class="hex-layer-2-2-1"></div>
+                        <div class="hex-layer-item hex-layer-2-2-1"></div>
                     </div>
                 </div>
                 <div class="hexagon-2">
                     <div class="hex-layer-1">
-                        <div class="hex-layer-2-2-2"></div>
+                        <div class="hex-layer-item hex-layer-2-2-2"></div>
                     </div>
                 </div>
                 <div class="hexagon-2">
                     <div class="hex-layer-1">
-                        <div class="hex-layer-2-2-3"></div>
+                        <div class="hex-layer-item hex-layer-2-2-3"></div>
                     </div>
                 </div>
                 <div class="hexagon-2">
                     <div class="hex-layer-1">
-                        <div class="hex-layer-2-2-4"></div>
+                        <div class="hex-layer-item hex-layer-2-2-4"></div>
                     </div>
                 </div>
                 <div class="hexagon-2">
                     <div class="hex-layer-1">
-                        <div class="hex-layer-2-2-5"></div>
+                        <div class="hex-layer-item hex-layer-2-2-5"></div>
                     </div>
                 </div>
             </div>
@@ -83,22 +83,22 @@
                 <div class="main-line line-left-2"></div>
                 <div class="hexagon-3">
                     <div class="hex-layer-1">
-                        <div class="hex-layer-3-3-1"></div>
+                        <div class="hex-layer-item hex-layer-3-3-1"></div>
                     </div>
                 </div>
                 <div class="hexagon-3">
                     <div class="hex-layer-1">
-                        <div class="hex-layer-3-3-2"></div>
+                        <div class="hex-layer-item hex-layer-3-3-2"></div>
                     </div>
                 </div>
                 <div class="hexagon-3">
                     <div class="hex-layer-1">
-                        <div class="hex-layer-3-3-3"></div>
+                        <div class="hex-layer-item hex-layer-3-3-3"></div>
                     </div>
                 </div>
                 <div class="hexagon-3">
                     <div class="hex-layer-1">
-                        <div class="hex-layer-3-3-4"></div>
+                        <div class="hex-layer-item hex-layer-3-3-4"></div>
                     </div>
                 </div>
                 <div class="main-line line-right-2"></div>
