--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
     <meta name="description" content="реализация Hexal" />
     <meta name="keywords" content="Hexal, html" />
-    <link type="text/css" href="../hexal/style/style.css" rel="stylesheet">
+    <link type="text/css" href="./style/style.css" rel="stylesheet">
 
 </head>
 <body>
