fix: rename link to style.css

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
     <meta name="description" content="реализация Hexal" />
     <meta name="keywords" content="Hexal, html" />
-    <link type="text/css" href="../hexal/style/style.css" rel="stylesheet">
+    <link type="text/css" href="./style/style.css" rel="stylesheet">
 
 </head>
 <body>
@@ -115,7 +115,8 @@
                 </div>
                 <h3 class="artical-text" id="About">Smith Anderson</h3>
                 <p class="artical-text subtitle">Illustrator & Character Designer</p>
-                <p class="artical-text lead">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris porttitor, nibh at
+                <p class="artical-text lead">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris porttitor,
+                    nibh at
                     sagittis tristique, enim magna pretium augue, eget consectetur sem dui non urna. Integer gravida,
                     diam congue molestie fringilla, elit odio rhon-<br>cus turpis, ac dictum libero elit vel metus.
                     Morbi egestas sit amet velit eget venenatis. Mauris porttitor, nibh at sagittis tristique, enim
@@ -145,7 +146,9 @@
         <form class="in-touch-form" action="" method="POST">
             <fieldset>
                 <legend id="Get-in-touch">Get In Touch</legend>
-                <div class="form-desk"><p></p>In order to get in touch use the contact form below:</p></div>
+                <div class="form-desk">
+                    <p></p>In order to get in touch use the contact form below:</p>
+                </div>
                 <input type="text" placeholder="Name(Required)" name="name" required>
                 <br>
                 <input type="email" placeholder="Email(Required)" name="email" required>
@@ -157,14 +160,19 @@
             <button class="button-submit" type="submit">SEND</button>
         </form>
         <div class="footer-desc">
-            <p><b>Quisque Hendrerit:</b> purus dapi-<br>bus, ornare nibh vitae, viverra nibh. Fusce vitae aliquam tellus.
+            <p><b>Quisque Hendrerit:</b> purus dapi-<br>bus, ornare nibh vitae, viverra nibh. Fusce vitae aliquam
+                tellus.
                 Proin sit amet volutpat libero. Nulla sed nunc et tortor luctus faucibus morbi vitae. </p>
         </div>
         <div class="footer-list-1">
             <ul class="footer-list">
-                <li><p class="icon-address footer-item-location"><i class="icon-location"></i></p></li>
-                <li><a class="icon-address footer-item-phone" href="tel: +375293687500"><i class="icon-phone"></i></a></li>
-                <li><a class="icon-address footer-item-mail" href="mailto:3prn@mail.ru"><i class="icon-mail-alt"></i></a></li>
+                <li>
+                    <p class="icon-address footer-item-location"><i class="icon-location"></i></p>
+                </li>
+                <li><a class="icon-address footer-item-phone" href="tel: +375293687500"><i class="icon-phone"></i></a>
+                </li>
+                <li><a class="icon-address footer-item-mail" href="mailto:3prn@mail.ru"><i
+                            class="icon-mail-alt"></i></a></li>
             </ul>
         </div>
         <div class="footer-list-2">
